--- a/portfolio/src/main/resources/application.yml
+++ b/portfolio/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: portfolio
   mail:
     host: smtp.gmail.com
-    port: 587
+    port: 465
     username: ${MAIL_USERNAME}
     password: ${MAIL_PASSWORD}
     properties:
@@ -11,8 +11,13 @@ spring:
         smtp:
           auth: true
           starttls:
+            enable: false
+          ssl:
             enable: true
-            required: true
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+            fallback: false
 app:
   contact:
     email: ${MAIL_EMAIL}
